UI: Select Linked Instanced Collection still named Dupligroup

Fixes T58747